Update UserRecord.java